<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/salmonbackground"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageBackgroundLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/LogoImage"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bigtransparentlogo" />

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageAvatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/blue" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserratbold"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageHeadphones"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/headphones" />

            <Button
                android:id="@+id/buttonYourMusic"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserratbold"
                android:gravity="left"
                android:letterSpacing="0"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/YourMusic"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageRadio"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/radioicon" />

            <Button
                android:id="@+id/buttonOpenRadio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center|left"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserratbold"
                android:gravity="center|left"
                android:letterSpacing="0"
                android:padding="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/Radio"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageSettings"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/settings" />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserratbold"
                android:gravity="center|left"
                android:letterSpacing="0"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:text="@string/Settings"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/back" />

            <Button
                android:id="@+id/buttonBackMenu"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserratbold"
                android:gravity="center|left"
                android:letterSpacing="0"
                android:paddingLeft="0dp"
                android:text="@string/Back"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="90dp">

            <ImageView
                android:id="@+id/imageExit"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/singout" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserratbold"
                android:gravity="center|left"
                android:letterSpacing="0"
                android:paddingLeft="0dp"
                android:text="@string/Exit"
                android:textAllCaps="false"
                android:textSize="20sp" />/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>